# faust-dsp-ujm

./: Cargo.toml  LICENSE  README.md  index.html  plan.md  run.sh  vAnalog.rs
examples/: hello440.dsp  virtualAnalog.dsp
examples/basics/: amplitude.dsp  ampmod.dsp  comments.dsp  composition.dsp  custom-functions.dsp  libraries.dsp  mixing.dsp  parallel.dsp
examples/basics2/: gain.dsp  merge-cable.dsp  sequential.dsp  sliders  sliders.dsp  sliders.rs  split-cable.dsp
examples/functions/: f0.dsp  f1.dsp  f2.dsp  f3.dsp  f4.dsp  f5.dsp
examples/functions-signals/: f0.dsp
examples/spectrum/: functions-gui.dsp  functions.dsp  oscillators.dsp  select.dsp
examples/synthesis/: additive-classic.dsp  additive.dsp  switch-waveform.dsp
examples/synthesis_advanced/: counter_samples.dsp  monitoring_values.dsp  recursive.dsp
examples/time/: counter_samples.dsp  delays-feedback.dsp  delays-sliders.dsp  delays.dsp  monitoring_values.dsp  phasor.dsp  recursive.dsp  soundfile.dsp  tables.dsp  waveform_switch_counter.dsp  waveforms.dsp
macros/: Cargo.toml
macros/src/: lib.rs
src/: keymap.rs  main.rs
src/screens/: agenda.rs  digital.rs  faust.rs  mod.rs  myself.rs  signal.rs  sound.rs  splash.rs  title.rs  toc.rs
src/screens/faust/: basics.rs  basics2.rs  functions.rs  intro.rs  mod.rs  spectrum.rs  synthesis.rs  synthesis_advanced.rs  time.rs
src/screens/layouts/: content.rs  mod.rs  (+2 more)
src/widgets/: aliasing.rs  db.rs  faustblock.rs  mod.rs  particles.rs  popup_menu.rs  quantization.rs  ripple.rs  sampling.rs  slide_content.rs  spectrogram.rs  waveform.rs
(+4 files in other folders)
