[package]
name = "playground-tui"
version = "0.1.0"
description = "owl"
authors = ["Pierre Cochard <pierre.cochard@inria.fr>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["macros", "unstable-widget-ref", "widget-calendar"] }
color-eyre = "0.6.3"
tui-big-text = "0.7.1"
tui-rain = "1.0.1"
indoc = "2.0.6"
time = "0.3.43"
ratatui-macros = "0.6.0"
