[package]
name = "faust-dsp-ujm"
version = "0.1.0"
description = "owl"
authors = ["Pierre Cochard <pierre.cochard@inria.fr>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets", "macros", "unstable-rendered-line-info", "unstable-widget-ref", "widget-calendar"] }
color-eyre = "0.6.3"
tui-rain = "1.0.1"
indoc = "2.0.6"
time = "0.3.43"
ratatui-macros = "0.6.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
tui-markdown = "0.3.5"
rand = "0.9.2"
edtui = "0.9.8"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tui-widgets = "0.4.1"
tachyonfx = "0.19.0"
ascii-gen = "1.1.0"
